--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -113,6 +113,8 @@
               slug: guides/branching-neon-api
             - title: Branching with GitHub Actions
               slug: guides/branching-github-actions
+            - title: Branch refresh with the Neon API
+              slug: guides/branching-github-actions
         - title: Project sharing
           slug: guides/project-sharing-guide
         - title: Read replicas
