Fix link and other minor items

--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -263,5 +263,5 @@
       slug: reference/sdk
     - title: Glossary
       slug: reference/glossary
-    - title: Postgres Compatibility
+    - title: Postgres compatibility
       slug: reference/compatibility
