--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -108,6 +108,8 @@
         - title: Branching
           items: 
             - title: Branching — Point-in-time restore
+              slug: guides/branching-test-queries
+            - title: Branching — Testing queries
               slug: guides/branching-pitr
             - title: Branching with the CLI
               slug: guides/branching-neon-cli
