--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -129,6 +129,8 @@
               slug: guides/read-replica-guide
             - title: Data analysis and reporting
               slug: guides/read-replica-data-analysis
+            - title: Use read replicas with Prisma
+              slug: guides/read-replica-prisma
         - title: Manage roles and databases with SQL
           slug: guides/manage-database-access
         - title: Extensions
