--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -240,6 +240,8 @@
       slug: import/import-from-neon
     - title: Migrate data with AWS DMS
       slug: import/migrate-aws-dms
+    - title: Import sample data
+      slug: import/sample-data
 - title: Security
   items:
     - title: Security overview
