--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -227,7 +227,7 @@
     - title: pg_tiktoken
       slug: extensions/pg_tiktoken
     - title: Google Colab
-      slug: ai/google-colab
+      slug: ai/ai-google-colab
 - title: Postgres extensions
   slug: extensions/pg-extensions
 - title: Import data
