--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@hookform/resolvers": "^3.2.0",
     "@next/bundle-analyzer": "^13.4.19",
+    "@octokit/core": "^5.0.1",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-slider": "^1.1.2",
     "@react-hook/window-scroll": "^1.3.0",
