--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
   "*.{js,jsx,html,css}": "prettier --write",
-  "*.{js,jsx}": "eslint --cache --fix"
+  "*.{js,jsx}": "eslint --cache --fix",
+  "**/*.{md,mdx}": "node src/scripts/update-frontmatter.js"
 }
