--- a/.github/workflows/update-frontmatter.yml
+++ b/.github/workflows/update-frontmatter.yml
@@ -18,16 +18,15 @@ jobs:
       with:
         node-version: 18
 
-    - name: Get list of modified markdown files
-      id: getfile
+    - name: Get list of modified files
+      id: get-modified-files
       run: |
-        echo "::set-output name=markdownfiles::$(git diff-tree --no-commit-id --name-only -r HEAD | grep '^content/docs/.*\.md$')"
-        
-    - name: Run update script if there are markdown changes
-      run: |
-        if [[ -n "${{ steps.getfile.outputs.markdownfiles }}" ]]; then
-          node src/scripts/update-frontmatter.js ${{ steps.getfile.outputs.markdownfiles }}
-        fi
+        modified_files=$(git diff --name-only HEAD^ HEAD | grep '^content/docs/.*\.md$')
+        echo "Modified files: $modified_files"
+        echo "modified_files=$modified_files" >> $GITHUB_OUTPUT
+      
+    - name: Run update script
+      run: node scr/scripts/update-frontmatter.js ${{ steps.get-modified-files.outputs.modified_files }}
 
     - name: Commit changes
       run: |
