fix: exclude main branch from update frontmatter

--- a/.github/workflows/update-frontmatter.yml
+++ b/.github/workflows/update-frontmatter.yml
@@ -2,6 +2,9 @@ name: Update Frontmatter
 
 on:
   push:
+    branches:
+      - '*'
+      - '!main' # Exclude the main branch
     paths:
       - 'content/docs/**/*.md'
 
