--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -233,6 +233,7 @@
 - title: Postgres extensions
   slug: extensions/pg-extensions
 - title: Import data
+  slug: import/import-intro
   items:
     - title: Import from Postgres
       slug: import/import-from-postgres
