--- a/package.json
+++ b/package.json
@@ -79,10 +79,12 @@
     "@next/eslint-plugin-next": "^13.4.19",
     "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.15",
+    "cypress": "^13.3.0",
     "encoding": "^0.1.13",
     "eslint": "^8.47.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
