--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -95,6 +95,12 @@
       slug: manage/integrations
     - title: Operations
       slug: manage/operations
+    - title: Access
+          items: 
+            - title: Project access
+              slug: manage/project-acess
+            - title: Database access
+              slug: guides/manage-database-access
     - title: Backups
       slug: manage/backups
 - title: Guides
@@ -131,8 +137,6 @@
               slug: guides/read-replica-data-analysis
             - title: Use read replicas with Prisma
               slug: guides/read-replica-prisma
-        - title: Manage roles and databases with SQL
-          slug: guides/manage-database-access
         - title: Extensions
           items:
             - title: neon_utils
