--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -122,7 +122,7 @@
               slug: guides/branching-github-actions
             - title: Refresh a branch with the Neon API
               slug: guides/branch-refresh
-            - title: Promote a branch to primary with the Neon API
+            - title: Promote a branch with the Neon API
               slug: guides/branch-promote
         - title: Project sharing
           slug: guides/project-sharing-guide
