chore: minor fix

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          project: ./site
+          project: ./cypress
           browser: chrome
           build: npm run build
           start: npm run start
