--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -19,3 +19,10 @@ jobs:
           wait-on: "http://localhost:3000"
         env:
           NEXT_PUBLIC_DEFAULT_SITE_URL: http://localhost:3000
+          WP_HTACCESS_USERNAME: ${{ secrets.WP_HTACCESS_USERNAME }}
+          WP_HTACCESS_PASSWORD: ${{ secrets.WP_HTACCESS_PASSWORD }}
+          WP_GRAPHQL_URL: ${{ secrets.WP_GRAPHQL_URL }}
+          NEXT_PUBLIC_RELEASE_NOTES_API_URL: ${{ secrets.NEXT_PUBLIC_RELEASE_NOTES_API_URL }}
+          NEXT_PUBLIC_DOCS_GITHUB_PATH: ${{ secrets.NEXT_PUBLIC_DOCS_GITHUB_PATH }}
+          NEXT_PUBLIC_RELEASE_NOTES_GITHUB_PATH: ${{ secrets.NEXT_PUBLIC_RELEASE_NOTES_GITHUB_PATH }}
+
