--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint:md": "markdownlint --ignore-path .gitignore .",
     "lint:md:fix": "markdownlint --fix --ignore-path .gitignore .",
     "check:broken-links": "linkinator --config linkinator.config.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "npx cypress open"
   },
   "dependencies": {
     "@docsearch/react": "^3.5.2",
