--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -199,7 +199,7 @@
           slug: guides/stepzen
         - title: WunderGraph
           slug: guides/wundergraph
-    - title: Schema migrations
+    - title: Schema migration
       items:
         - title: Liquibase
           items:
