--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -201,6 +201,10 @@
           slug: guides/wundergraph
     - title: Schema migration
       items:
+        - title: Flyway
+          items:
+            - title: Get started
+            - slug: guides/flyway  
         - title: Liquibase
           items:
              - title: Get started
