--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -302,5 +302,5 @@
 - title: Community
   slug: community/community-intro
   items:
-    - title: Docs contribution guide
+    - title: Docs Contribution Guide
       slug: community/contribution-guide
