--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-hook-form": "^7.45.4",
     "react-intersection-observer": "^9.5.2",
     "react-paginate": "^8.2.0",
+    "react-scroll": "^1.9.0",
     "react-share": "^4.4.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.21.1",
