--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -160,7 +160,13 @@
           slug: guides/go
           ariaLabel: Connect a Go application to Neon
         - title: Java
-          slug: guides/java
+          items:
+            - title: Quarkus (Reactive)
+              slug: guides/quarkus-reactive
+            - title: Quarkus (JDBC)
+              slug: guides/quarkus-jdbc
+            - title: JDBC
+              slug: guides/java
         - title: Javascript
           items:
             - title: Node.js
