Draft to test locall

--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -229,7 +229,7 @@
               slug: guides/vercel
             - title: Connect manually
               slug: guides/vercel-manual
-    - title: Partner Guide
+    - title: For Partners
       slug: guides/partner-intro
       items: 
         - title: OAuth
