--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY=
 NEXT_PUBLIC_ALGOLIA_INDEX_NAME=
 NEXT_PUBLIC_ALGOLIA_BLOG_INDEX_NAME=
+NEXT_PUBLIC_ALGOLIA_POSTGRES_INDEX_NAME=
 
 NEXT_PUBLIC_DOCS_GITHUB_PATH=https://github.com/neondatabase/website/tree/main/content/docs/
 NEXT_PUBLIC_RELEASE_NOTES_GITHUB_PATH=https://github.com/neondatabase/website/tree/main/content/release-notes/
