--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@octokit/core": "^5.0.1",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-slider": "^1.1.2",
+    "@react-hook/throttle": "^2.2.0",
     "@react-hook/window-scroll": "^1.3.0",
     "@rive-app/react-canvas": "^4.1.4",
     "@splinetool/react-spline": "^2.2.6",
