feat: exclude paths

--- a/.github/workflows/update-frontmatter.yml
+++ b/.github/workflows/update-frontmatter.yml
@@ -7,6 +7,8 @@ on:
       - '!main' # Exclude the main branch
     paths:
       - 'content/docs/**/*.md'
+      - '!content/docs/postgresql/**/*.md' # Exclude the PostgreSQL docs
+      - '!content/docs/README.md' # Exclude the README.md file
 
 jobs:
   update-date:
