chore: minor update

--- a/.github/workflows/update-frontmatter.yml
+++ b/.github/workflows/update-frontmatter.yml
@@ -6,7 +6,7 @@ on:
       - 'main'
     paths:
       - 'content/docs/**/*.md'
-      - '!content/docs/README.md'
+      - '!content/docs/README.md' # Exclude the README.md file
 
 jobs:
   update-date:
