--- a/.github/workflows/update-frontmatter.yml
+++ b/.github/workflows/update-frontmatter.yml
@@ -3,60 +3,50 @@ name: Update Frontmatter
 on:
   push:
     branches:
-      - '*'
-      - '!main' # Exclude the main branch
+      - main
     paths:
       - 'content/docs/**/*.md'
-      - '!content/docs/README.md' # Exclude the README.md file
+      - '!content/docs/README.md'
 
 jobs:
   update-date:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
       with:
-        fetch-depth: 0 # We fetch all history so that merge commits can be identified
+        fetch-depth: 2 # Fetching a depth of 2 includes the commit in question and the previous commit for comparison.
 
-    - name: Check for merge commit
-      id: check-merge
-      run: |
-        commit_parents=$(git rev-list --parents -n 1 HEAD)
-        echo "Commit Parents: $commit_parents"
-        [[ $(echo "$commit_parents" | wc -w) -gt 2 ]] && echo "This is a merge commit." && echo "is_merge_commit=true" >> $GITHUB_ENV || echo "is_merge_commit=false" >> $GITHUB_ENV
-
-    - name: Set up Node.js
-      if: env.is_merge_commit == 'false'
-      uses: actions/setup-node@v2
-      with:
-        node-version: 18
-
-    # Rest of the steps will also have the 'if' condition
-    - name: Get list of modified files
-      if: env.is_merge_commit == 'false'
+    - name: Get list of modified markdown files
       id: get-modified-files
       run: |
-        modified_files=$(git diff --name-only HEAD^ HEAD | grep '^content/docs/.*\.md$' | xargs)
+        modified_files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} -- 'content/docs/**/*.md')
         echo "Modified files: $modified_files"
+        if [ -z "$modified_files" ]; then
+          echo "No markdown files were changed."
+          exit 0
+        fi
         echo "modified_files=$modified_files" >> $GITHUB_ENV
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'
+
     - name: Install packages
-      if: env.is_merge_commit == 'false'
       run: npm ci
-      
+
     - name: Run update script
-      if: env.is_merge_commit == 'false'
       run: node src/scripts/update-frontmatter.js ${{ env.modified_files }}
 
     - name: Commit changes
-      if: env.is_merge_commit == 'false'
       run: |
         git config user.name "GitHub Action"
         git config user.email "action@github.com"
-        export HUSKY=0
         git add -A
-        if git diff --staged | grep '.'; then
+        if git diff --staged; then
           git commit -m "chore(docs): Update frontmatter date"
           git push
         else
