--- a/.github/workflows/update-frontmatter.yml
+++ b/.github/workflows/update-frontmatter.yml
@@ -3,41 +3,40 @@ name: Update Frontmatter
 on:
   push:
     branches:
-      - main
+      - 'main' # Exclude the main branch
     paths:
       - 'content/docs/**/*.md'
-      - '!content/docs/README.md'
+      - '!content/docs/README.md' # Exclude the README.md file
 
 jobs:
   update-date:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
       with:
-        fetch-depth: 2 # Fetching a depth of 2 includes the commit in question and the previous commit for comparison.
-
-    - name: Get list of modified markdown files
-      id: get-modified-files
-      run: |
-        modified_files=$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} -- 'content/docs/**/*.md')
-        echo "Modified files: $modified_files"
-        if [ -z "$modified_files" ]; then
-          echo "No markdown files were changed."
-          exit 0
-        fi
-        echo "modified_files=$modified_files" >> $GITHUB_ENV
+        fetch-depth: 2
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18'
+        node-version: 18
+
+    - name: Get list of modified files
+      id: get-modified-files
+      run: |
+        modified_files=$(git diff --name-only HEAD^ HEAD | grep '^content/docs/.*\.md$' || echo "")
+        echo "Modified files: $modified_files"
+        if [ -z "$modified_files" ]; then
+          echo "No modified Markdown files to update."
+          exit 0
+        fi
+        echo "modified_files=$modified_files" >> $GITHUB_ENV
 
     - name: Install packages
       run: npm ci
-
+      
     - name: Run update script
       run: node src/scripts/update-frontmatter.js ${{ env.modified_files }}
 
@@ -45,8 +44,9 @@ jobs:
       run: |
         git config user.name "GitHub Action"
         git config user.email "action@github.com"
+        export HUSKY=0
         git add -A
-        if git diff --staged; then
+        if git diff --staged | grep '.'; then
           git commit -m "chore(docs): Update frontmatter date"
           git push
         else
