chore: update codeowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
 /content/docs/ @danieltprice
-/src/ @bolotskydev
-*.js @bolotskydev
-*.jsx @bolotskydev
+/src/ @vannyle @k8isdead
+*.js @vannyle @k8isdead
+*.jsx @vannyle @k8isdead
