--- a/.github/workflows/update-frontmatter.yml
+++ b/.github/workflows/update-frontmatter.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   update-date:
     runs-on: ubuntu-latest
+    if: ${{ github.actor != 'GitHub Action' }}
 
     steps:
     - name: Checkout repository
