--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ NEXT_PUBLIC_ALGOLIA_BLOG_INDEX_NAME=
 NEXT_PUBLIC_DOCS_GITHUB_PATH=https://github.com/neondatabase/website/tree/main/content/docs/
 NEXT_PUBLIC_RELEASE_NOTES_GITHUB_PATH=https://github.com/neondatabase/website/tree/main/content/release-notes/
 NEXT_PUBLIC_RELEASE_NOTES_API_URL=https://neon.tech/api/release-notes
+
+SEGMENT_WRITE_KEY=
