--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@react-hook/throttle": "^2.2.0",
     "@react-hook/window-scroll": "^1.3.0",
     "@rive-app/react-canvas": "^4.1.4",
+    "@segment/analytics-next": "^1.61.0",
     "@splinetool/react-spline": "^2.2.6",
     "@tailwindcss/typography": "github:tailwindcss/typography",
-    "analytics-node": "^6.2.0",
     "clsx": "^2.0.0",
     "copy-to-clipboard": "^3.3.3",
     "date-fns": "^2.30.0",
