--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,4 @@ NEXT_PUBLIC_DOCS_GITHUB_PATH=https://github.com/neondatabase/website/tree/main/c
 NEXT_PUBLIC_RELEASE_NOTES_GITHUB_PATH=https://github.com/neondatabase/website/tree/main/content/release-notes/
 NEXT_PUBLIC_RELEASE_NOTES_API_URL=https://neon.tech/api/release-notes
 
-SEGMENT_WRITE_KEY=
+NEXT_PUBLIC_SEGMENT_WRITE_KEY=
