--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -225,7 +225,9 @@
           slug: guides/aws-lambda
     - title: Caching
       items:
-        - title: PolyScale
+        - title: PolyScale integration
+          slug: guides/polyscale-integration
+        - title: PolyScale manual setup
           slug: guides/polyscale
     - title: Deployment platforms
       items:
