--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -225,9 +225,7 @@
           slug: guides/aws-lambda
     - title: Caching
       items:
-        - title: PolyScale integration
-          slug: guides/polyscale-integration
-        - title: PolyScale manual setup
+        - title: PolyScale
           slug: guides/polyscale
     - title: Deployment platforms
       items:
