feat: add sitemap generation for postgres

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,8 @@ typings/
 # ignore local sitemap
 public/sitemap.xml
 public/sitemap-0.xml
+public/sitemap-postgres.xml
+public/sitemap-postgres-0.xml
 public/robots.txt
 
 # Mac files
