feat: integrate admonition with wp

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_DEFAULT_SITE_URL=http://localhost:3000
 
-WP_GRAPHQL_URL=https://neon-hwp.dreamhosters.com/graphql
+WP_GRAPHQL_URL=https://neondatabase.wpengine.com/graphql
 WP_GRAPHQL_AUTH_TOKEN=
 WP_PREVIEW_SECRET=
 AI_DOCS_CHAT_API_URL=
