skeleton of new pages

--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -38,10 +38,18 @@
     - title: Billing
       slug: introduction/about-billing
       items:
+        - title: Billing overview
+          slug: introduction/billing-overview
+        - title: Pricing calculators
+          slug: introcution/billing-calulators
         - title: Billing metrics
           slug: introduction/billing
+        - title: Billing rates
+          slug: introduction/billing-rates
         - title: Manage billing
           slug: introduction/manage-billing
+        - title: Sample billing
+          slug: introduction/billing-sample
     - title: Support
       slug: introduction/support
     - title: Status
