feat: add env variable

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -12,6 +12,7 @@ on:
       - 'src/utils/forms.js'
       - 'src/constants/forms.js'
       - 'cypress/**'
+      - '.github/workflows/e2e-tests.yml'
 jobs:
   install:
     runs-on: ubuntu-latest
@@ -28,6 +29,7 @@ jobs:
           wait-on: "http://localhost:3000"
         env:
           NEXT_PUBLIC_DEFAULT_SITE_URL: http://localhost:3000
+          NODE_ENV: development
           WP_HTACCESS_USERNAME: ${{ secrets.WP_HTACCESS_USERNAME }}
           WP_HTACCESS_PASSWORD: ${{ secrets.WP_HTACCESS_PASSWORD }}
           WP_GRAPHQL_URL: ${{ secrets.WP_GRAPHQL_URL }}
