--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -108,10 +108,10 @@
       slug: manage/backups
     - title: Logical replication
       items:
-         - title: Logical replication concepts
+         - title: Concepts
            slug: guides/logical-replication-concepts
-         - title: Manage logical replication
-           slug: manage/logical-replication-neon
+         - title: Manage
+           slug: guides/logical-replication-neon
 - title: Guides
   slug: guides/guides-intro
   items:
