--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -114,6 +114,8 @@
         - title: Branching
           slug: guides/branching-intro
           items: 
+            - title: Branching - Restore
+              slug: guides/branch-restore
             - title: Branching — Point-in-time restore
               slug: guides/branching-pitr
             - title: Branching — Testing queries
