fix: update the segment function

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -12,6 +12,7 @@ on:
       - 'src/utils/forms.js'
       - 'src/constants/forms.js'
       - 'cypress/**'
+      - 'src/utils/send-segment-event.js'
 jobs:
   install:
     runs-on: ubuntu-latest
