--- a/.github/workflows/reindex-algolia.yml
+++ b/.github/workflows/reindex-algolia.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     
     - name: Check for new file
       id: file-check
