--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -225,6 +225,8 @@
       items:
         - title: Exograph
           slug: guides/exograph
+        - title: FerretDB
+          slug: guides/ferretdb
         - title: Grafbase
           slug: guides/grafbase
         - title: Hasura
