--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -184,6 +184,8 @@
           slug: guides/astro
         - title: Remix
           slug: guides/remix
+        - title: Ruby on Rails
+          slug: guides/ruby-on-rails
     - title: Languages
       items:
         - title: Elixir
