--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -292,7 +292,7 @@
       items:
         - title: Google Colab
           slug: ai/ai-google-colab
-- title: Postgres guides
+- title: Postgres
   items:
     - title: Extensions
       slug: extensions/pg-extensions
@@ -305,6 +305,8 @@
       items:
         - title: json_build_object
           slug: functions/json_build_object
+          - title: json_extract_path
+          slug: functions/json_extract_path
 - title: Import data
   slug: import/import-intro
   items:
