--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -292,7 +292,7 @@
       items:
         - title: Google Colab
           slug: ai/ai-google-colab
-- title: Postgres guides
+- title: Postgres
   items:
     - title: Extensions
       slug: extensions/pg-extensions
@@ -303,6 +303,8 @@
           slug: extensions/pg_tiktoken
     - title: Functions
       items:
+        - title: json_array_elements
+          slug: functions/json_array_elements
         - title: json_build_object
           slug: functions/json_build_object
 - title: Import data
