Add guide to sidebar

--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -311,6 +311,9 @@
       items:
         - title: json_array_elements
           slug: functions/json_array_elements
+        - title: jsonb_array_elements
+          slug: functions/jsonb_array_elements
+          slug: functions/json_extract_path
         - title: json_build_object
           slug: functions/json_build_object
         - title: json_extract_path
