--- a/content/docs/sidebar.yaml
+++ b/content/docs/sidebar.yaml
@@ -315,6 +315,8 @@
           slug: functions/json_build_object
         - title: json_extract_path
           slug: functions/json_extract_path
+        - title: dense_rank
+          slug: functions/dense_rank
 - title: Import data
   slug: import/import-intro
   items:
